Add list of scripts in the collection
